tests/success/comptime/enum_value_lifetime.bz
enum E
{
	foo,
	bar,
}

function test()
{
	(consteval {
		let e = E.foo;
		let _ = __builtin_enum_value(e);
	});
}
