tests/error/enum_literal2.bz
enum E
{
	a,
	b,
}

function test()
{
	.a;
}
